// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Answer /> should render 1`] = `
.c0 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c5 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  padding: 0;
  max-width: 46.25rem;
}

.c5 > *:first-child {
  margin-top: 0;
}

.c5 > *:last-child {
  margin-bottom: 0;
}

.c3 {
  padding: 1.25rem 0;
}

.c4 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  border-color: #c9d3df;
  background-color: #fff;
}

.c4 > *:first-child {
  margin-top: 0;
}

.c4 > *:last-child {
  margin-bottom: 0;
}

.c12 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  border-color: #c9d3df;
  background-color: #ebeff3;
}

.c12 > *:first-child {
  margin-top: 0;
}

.c12 > *:last-child {
  margin-bottom: 0;
}

.c26 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  padding: 1rem;
  color: #434956;
  line-height: 0;
  border: none;
}

.c26:hover {
  color: #8c94a6;
}

.c26:active {
  position: relative;
  top: 1px;
}

.c21 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 48px;
  width: 100%;
  background-color: white;
  border-style: solid;
  border-width: 1px;
  border-radius: 0.25rem;
  -webkit-animation: iowhYu 0.3s ease-out;
  animation: iowhYu 0.3s ease-out;
  border-color: #fee5ad;
  box-shadow: 0 5px 10px 0 #c9d3df;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1rem;
  background-color: #fee5ad;
}

.c23 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem;
  color: #434956;
  text-align: left;
}

.c25 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 {
  position: relative;
  margin-bottom: 1.25rem;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c8 {
  color: #4c5467;
  font-weight: 600;
}

.c9 {
  margin-left: 1rem;
  color: #53657d;
  font-size: 0.875rem;
  display: inline-block;
}

.c10 {
  color: #4c5467;
  font-weight: 600;
}

.c11 {
  margin-left: -10px;
}

.c20 {
  position: fixed;
  bottom: 0;
  padding: 1rem;
  width: 100%;
  z-index: 1000;
}

.c24 {
  padding: 0 0.25rem;
}

.c15 {
  margin-bottom: 1rem;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c18 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #0c0c0e;
  background: #eaeaea;
  border-color: #eaeaea;
  border-bottom-color: #d1d1d1;
  min-width: 7rem;
}

.c18:not([disabled]):hover,
.c18:not([disabled]):focus {
  background: #f7f7f7;
  color: #18181c;
}

.c18:not([disabled]):active {
  color: #242429;
  background: #fff;
  border-width: 2px 1px 1px 1px;
  border-color: #eaeaea;
  outline: none;
}

.c18[aria-pressed="true"] {
  color: #18181c;
  background: #f7f7f7;
  border-width: 2px 1px 1px 1px;
  border-color: #eaeaea;
  border-top-color: #d1d1d1;
  box-shadow: inset 0 1px 2px 0 #d1d1d1;
}

.c18[aria-pressed="true"]:not([disabled]):hover,
.c18[aria-pressed="true"]:not([disabled]):focus {
  background-color: #eaeaea;
}

.c18[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #d1d1d1;
}

.c18[disabled] {
  cursor: not-allowed;
  color: rgba(12,12,14,0.4);
}

.c18 + .c17 {
  margin-left: 1rem;
}

.c19 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
  border-bottom-color: #0053b3;
  min-width: 7rem;
}

.c19:not([disabled]):hover,
.c19:not([disabled]):focus {
  background: #07f;
  color: #fff;
}

.c19:not([disabled]):active {
  color: #fff;
  background: #1a85ff;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  outline: none;
}

.c19[aria-pressed="true"] {
  color: #fff;
  background: #07f;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  border-top-color: #0053b3;
  box-shadow: inset 0 1px 2px 0 #0053b3;
}

.c19[aria-pressed="true"]:not([disabled]):hover,
.c19[aria-pressed="true"]:not([disabled]):focus {
  background-color: #006be6;
}

.c19[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #0053b3;
}

.c19[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

.c19 + .c17 {
  margin-left: 1rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 0;
}

.c2 {
  width: 80%;
}

.c13 {
  margin: 1rem auto;
}

.c14 {
  margin-top: 2.5rem;
  padding: 1rem;
  background-color: #f9f9fc;
  border-radius: 0.25rem;
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c5 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c4 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c4 {
    border: none;
    padding: 0 5pt;
  }
}

@media (max-width:600px) {
  .c12 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c12 {
    border: none;
    padding: 0 5pt;
  }
}

@media (max-width:600px) {
  .c7 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@media (max-width:600px) {
  .c9 {
    margin-left: 0;
  }
}

@media (max-width:980px) {
  .c2 {
    width: 100%;
  }
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
        data-main-content="true"
      >
        <div
          class="c0"
        >
          <div
            class="c4"
          >
            <div
              class="c3"
            >
              <div
                class="c5 c6"
              >
                <h1>
                  Article du code
                </h1>
                <div
                  class="c7"
                >
                  <span
                    class="c8"
                  >
                    social groove
                  </span>
                  <span
                    class="c9"
                  >
                    Mis à jour le : 
                    <span
                      class="c10"
                    >
                      03/11/1979
                    </span>
                  </span>
                </div>
                <div
                  class="c11"
                />
              </div>
              <div
                class="c5"
              >
                <div
                  class="c12 c13"
                >
                  intro de l'article
                </div>
                <div>
                  <p
                    class="test-content"
                  >
                    Contenu au format 
                    <strong>
                      html
                    </strong>
                  </p>
                </div>
                <div>
                  Contenu supplémentaire
                </div>
                <div
                  class="c14"
                >
                  pied de page
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c3"
      >
        <div
          class="c0"
        >
          <div
            class="c12"
          >
            <h3
              class="c15"
            >
              Avez-vous trouvé la réponse à votre question ?
            </h3>
            <p
              class="c16"
            >
              <button
                aria-pressed="false"
                class="c17 c18"
              >
                Non
              </button>
              <button
                aria-pressed="false"
                class="c17 c19"
              >
                Oui
              </button>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c20"
  >
    <div
      class="c21"
    >
      <div
        class="c22"
      >
        <svg
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
          />
          <line
            x1="12"
            x2="12"
            y1="9"
            y2="13"
          />
          <line
            x1="12"
            x2="12"
            y1="17"
            y2="17"
          />
        </svg>
      </div>
      <div
        class="c23"
        role="alert"
      >
        Ce site est en cours de construction, la fiabilité des réponses qui s’y trouvent ne sont pas garanties.
        <a
          class="c24"
          href="https://www.legifrance.gouv.fr/affichTexteArticle.do;jsessionid=AE9DCF75DDCF0465784CEE0E7D62729F.tplgfr37s_2?idArticle=JORFARTI000035607420&cidTexte=JORFTEXT000035607388&dateTexte=29990101&categorieLien=id"
          rel="noopener noreferrer"
          target="_blank"
          title="consulter l'ordonance"
        >
          L’ouverture officielle du site
        </a>
        est prévue pour 2020.
      </div>
      <div
        class="c25"
      >
        <button
          aria-label="Fermer"
          aria-pressed="false"
          class="c26"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="18"
              x2="6"
              y1="6"
              y2="18"
            />
            <line
              x1="6"
              x2="18"
              y1="6"
              y2="18"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Answer /> should render a breadcrumbs 1`] = `
.c3 {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.c2 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
}

.c2 > *:first-child {
  margin-top: 0;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c9 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  padding: 0;
  max-width: 46.25rem;
}

.c9 > *:first-child {
  margin-top: 0;
}

.c9 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  padding: 1.25rem 0;
}

.c8 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  border-color: #c9d3df;
  background-color: #fff;
}

.c8 > *:first-child {
  margin-top: 0;
}

.c8 > *:last-child {
  margin-bottom: 0;
}

.c16 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  border-color: #c9d3df;
  background-color: #ebeff3;
}

.c16 > *:first-child {
  margin-top: 0;
}

.c16 > *:last-child {
  margin-bottom: 0;
}

.c30 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  padding: 1rem;
  color: #434956;
  line-height: 0;
  border: none;
}

.c30:hover {
  color: #8c94a6;
}

.c30:active {
  position: relative;
  top: 1px;
}

.c25 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 48px;
  width: 100%;
  background-color: white;
  border-style: solid;
  border-width: 1px;
  border-radius: 0.25rem;
  -webkit-animation: iowhYu 0.3s ease-out;
  animation: iowhYu 0.3s ease-out;
  border-color: #fee5ad;
  box-shadow: 0 5px 10px 0 #c9d3df;
}

.c26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1rem;
  background-color: #fee5ad;
}

.c27 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem;
  color: #434956;
  text-align: left;
}

.c29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c10 {
  position: relative;
  margin-bottom: 1.25rem;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c12 {
  color: #4c5467;
  font-weight: 600;
}

.c13 {
  margin-left: 1rem;
  color: #53657d;
  font-size: 0.875rem;
  display: inline-block;
}

.c14 {
  color: #4c5467;
  font-weight: 600;
}

.c15 {
  margin-left: -10px;
}

.c24 {
  position: fixed;
  bottom: 0;
  padding: 1rem;
  width: 100%;
  z-index: 1000;
}

.c28 {
  padding: 0 0.25rem;
}

.c19 {
  margin-bottom: 1rem;
}

.c20 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c22 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #0c0c0e;
  background: #eaeaea;
  border-color: #eaeaea;
  border-bottom-color: #d1d1d1;
  min-width: 7rem;
}

.c22:not([disabled]):hover,
.c22:not([disabled]):focus {
  background: #f7f7f7;
  color: #18181c;
}

.c22:not([disabled]):active {
  color: #242429;
  background: #fff;
  border-width: 2px 1px 1px 1px;
  border-color: #eaeaea;
  outline: none;
}

.c22[aria-pressed="true"] {
  color: #18181c;
  background: #f7f7f7;
  border-width: 2px 1px 1px 1px;
  border-color: #eaeaea;
  border-top-color: #d1d1d1;
  box-shadow: inset 0 1px 2px 0 #d1d1d1;
}

.c22[aria-pressed="true"]:not([disabled]):hover,
.c22[aria-pressed="true"]:not([disabled]):focus {
  background-color: #eaeaea;
}

.c22[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #d1d1d1;
}

.c22[disabled] {
  cursor: not-allowed;
  color: rgba(12,12,14,0.4);
}

.c22 + .c21 {
  margin-left: 1rem;
}

.c23 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
  border-bottom-color: #0053b3;
  min-width: 7rem;
}

.c23:not([disabled]):hover,
.c23:not([disabled]):focus {
  background: #07f;
  color: #fff;
}

.c23:not([disabled]):active {
  color: #fff;
  background: #1a85ff;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  outline: none;
}

.c23[aria-pressed="true"] {
  color: #fff;
  background: #07f;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  border-top-color: #0053b3;
  box-shadow: inset 0 1px 2px 0 #0053b3;
}

.c23[aria-pressed="true"]:not([disabled]):hover,
.c23[aria-pressed="true"]:not([disabled]):focus {
  background-color: #006be6;
}

.c23[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #0053b3;
}

.c23[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

.c23 + .c21 {
  margin-left: 1rem;
}

.c0 {
  background: #d7e8f9;
}

.c4 {
  display: inline-block;
  padding: 0.625rem 1.25rem;
}

.c4:first-child {
  padding-left: 0;
}

.c5 {
  display: inline-block;
  pointer-events: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 0;
}

.c7 {
  width: 80%;
}

.c17 {
  margin: 1rem auto;
}

.c18 {
  margin-top: 2.5rem;
  padding: 1rem;
  background-color: #f9f9fc;
  border-radius: 0.25rem;
}

@media print {
  .c2 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c9 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c8 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c8 {
    border: none;
    padding: 0 5pt;
  }
}

@media (max-width:600px) {
  .c16 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c16 {
    border: none;
    padding: 0 5pt;
  }
}

@media (max-width:600px) {
  .c11 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@media (max-width:600px) {
  .c13 {
    margin-left: 0;
  }
}

@media (max-width:980px) {
  .c7 {
    width: 100%;
  }
}

<div>
  <nav
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <ul
          class="c3"
        >
          <li
            class="c4"
          >
            <a
              href="/themes"
              title="Voir le theme Thèmes"
            >
              Thèmes
            </a>
          </li>
          <li
            aria-hidden="true"
            class="c5"
          >
             » 
          </li>
          <li
            class="c4"
          >
            <a
              href="/themes/tag-1"
              title="Voir le theme tag1"
            >
              tag1
            </a>
          </li>
          <li
            aria-hidden="true"
            class="c5"
          >
             » 
          </li>
          <li
            class="c4"
          >
            <a
              href="/themes/tag-2"
              title="Voir le theme tag2"
            >
              tag2
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>
  <div
    class="c2 c6"
  >
    <div
      class="c7"
    >
      <div
        class="c1"
        data-main-content="true"
      >
        <div
          class="c2"
        >
          <div
            class="c8"
          >
            <div
              class="c1"
            >
              <div
                class="c9 c10"
              >
                <h1>
                  Article du code
                </h1>
                <div
                  class="c11"
                >
                  <span
                    class="c12"
                  >
                    social groove
                  </span>
                  <span
                    class="c13"
                  >
                    Mis à jour le : 
                    <span
                      class="c14"
                    >
                      03/11/1979
                    </span>
                  </span>
                </div>
                <div
                  class="c15"
                />
              </div>
              <div
                class="c9"
              >
                <div
                  class="c16 c17"
                >
                  intro de l'article
                </div>
                <div>
                  <p
                    class="test-content"
                  >
                    Contenu au format 
                    <strong>
                      html
                    </strong>
                  </p>
                </div>
                <div>
                  Contenu supplémentaire
                </div>
                <div
                  class="c18"
                >
                  pied de page
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c1"
      >
        <div
          class="c2"
        >
          <div
            class="c16"
          >
            <h3
              class="c19"
            >
              Avez-vous trouvé la réponse à votre question ?
            </h3>
            <p
              class="c20"
            >
              <button
                aria-pressed="false"
                class="c21 c22"
              >
                Non
              </button>
              <button
                aria-pressed="false"
                class="c21 c23"
              >
                Oui
              </button>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c24"
  >
    <div
      class="c25"
    >
      <div
        class="c26"
      >
        <svg
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
          />
          <line
            x1="12"
            x2="12"
            y1="9"
            y2="13"
          />
          <line
            x1="12"
            x2="12"
            y1="17"
            y2="17"
          />
        </svg>
      </div>
      <div
        class="c27"
        role="alert"
      >
        Ce site est en cours de construction, la fiabilité des réponses qui s’y trouvent ne sont pas garanties.
        <a
          class="c28"
          href="https://www.legifrance.gouv.fr/affichTexteArticle.do;jsessionid=AE9DCF75DDCF0465784CEE0E7D62729F.tplgfr37s_2?idArticle=JORFARTI000035607420&cidTexte=JORFTEXT000035607388&dateTexte=29990101&categorieLien=id"
          rel="noopener noreferrer"
          target="_blank"
          title="consulter l'ordonance"
        >
          L’ouverture officielle du site
        </a>
        est prévue pour 2020.
      </div>
      <div
        class="c29"
      >
        <button
          aria-label="Fermer"
          aria-pressed="false"
          class="c30"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="18"
              x2="6"
              y1="6"
              y2="18"
            />
            <line
              x1="6"
              x2="18"
              y1="6"
              y2="18"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Answer /> should render tooltip 1`] = `
.c0 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c5 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  padding: 0;
  max-width: 46.25rem;
}

.c5 > *:first-child {
  margin-top: 0;
}

.c5 > *:last-child {
  margin-bottom: 0;
}

.c3 {
  padding: 1.25rem 0;
}

.c4 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  border-color: #c9d3df;
  background-color: #fff;
}

.c4 > *:first-child {
  margin-top: 0;
}

.c4 > *:last-child {
  margin-bottom: 0;
}

.c12 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  border-color: #c9d3df;
  background-color: #ebeff3;
}

.c12 > *:first-child {
  margin-top: 0;
}

.c12 > *:last-child {
  margin-bottom: 0;
}

.c27 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  padding: 1rem;
  color: #434956;
  line-height: 0;
  border: none;
}

.c27:hover {
  color: #8c94a6;
}

.c27:active {
  position: relative;
  top: 1px;
}

.c22 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 48px;
  width: 100%;
  background-color: white;
  border-style: solid;
  border-width: 1px;
  border-radius: 0.25rem;
  -webkit-animation: iowhYu 0.3s ease-out;
  animation: iowhYu 0.3s ease-out;
  border-color: #fee5ad;
  box-shadow: 0 5px 10px 0 #c9d3df;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1rem;
  background-color: #fee5ad;
}

.c24 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem;
  color: #434956;
  text-align: left;
}

.c26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 {
  position: relative;
  margin-bottom: 1.25rem;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c8 {
  color: #4c5467;
  font-weight: 600;
}

.c9 {
  margin-left: 1rem;
  color: #53657d;
  font-size: 0.875rem;
  display: inline-block;
}

.c10 {
  color: #4c5467;
  font-weight: 600;
}

.c11 {
  margin-left: -10px;
}

.c21 {
  position: fixed;
  bottom: 0;
  padding: 1rem;
  width: 100%;
  z-index: 1000;
}

.c25 {
  padding: 0 0.25rem;
}

.c16 {
  margin-bottom: 1rem;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c19 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #0c0c0e;
  background: #eaeaea;
  border-color: #eaeaea;
  border-bottom-color: #d1d1d1;
  min-width: 7rem;
}

.c19:not([disabled]):hover,
.c19:not([disabled]):focus {
  background: #f7f7f7;
  color: #18181c;
}

.c19:not([disabled]):active {
  color: #242429;
  background: #fff;
  border-width: 2px 1px 1px 1px;
  border-color: #eaeaea;
  outline: none;
}

.c19[aria-pressed="true"] {
  color: #18181c;
  background: #f7f7f7;
  border-width: 2px 1px 1px 1px;
  border-color: #eaeaea;
  border-top-color: #d1d1d1;
  box-shadow: inset 0 1px 2px 0 #d1d1d1;
}

.c19[aria-pressed="true"]:not([disabled]):hover,
.c19[aria-pressed="true"]:not([disabled]):focus {
  background-color: #eaeaea;
}

.c19[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #d1d1d1;
}

.c19[disabled] {
  cursor: not-allowed;
  color: rgba(12,12,14,0.4);
}

.c19 + .c18 {
  margin-left: 1rem;
}

.c20 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
  border-bottom-color: #0053b3;
  min-width: 7rem;
}

.c20:not([disabled]):hover,
.c20:not([disabled]):focus {
  background: #07f;
  color: #fff;
}

.c20:not([disabled]):active {
  color: #fff;
  background: #1a85ff;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  outline: none;
}

.c20[aria-pressed="true"] {
  color: #fff;
  background: #07f;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  border-top-color: #0053b3;
  box-shadow: inset 0 1px 2px 0 #0053b3;
}

.c20[aria-pressed="true"]:not([disabled]):hover,
.c20[aria-pressed="true"]:not([disabled]):focus {
  background-color: #006be6;
}

.c20[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #0053b3;
}

.c20[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

.c20 + .c18 {
  margin-left: 1rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 0;
}

.c2 {
  width: 80%;
}

.c13 {
  margin: 1rem auto;
}

.c15 {
  margin-top: 2.5rem;
  padding: 1rem;
  background-color: #f9f9fc;
  border-radius: 0.25rem;
}

.c14 {
  border-bottom: 1px dotted #006be6;
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c5 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c4 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c4 {
    border: none;
    padding: 0 5pt;
  }
}

@media (max-width:600px) {
  .c12 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c12 {
    border: none;
    padding: 0 5pt;
  }
}

@media (max-width:600px) {
  .c7 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@media (max-width:600px) {
  .c9 {
    margin-left: 0;
  }
}

@media (max-width:980px) {
  .c2 {
    width: 100%;
  }
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
        data-main-content="true"
      >
        <div
          class="c0"
        >
          <div
            class="c4"
          >
            <div
              class="c3"
            >
              <div
                class="c5 c6"
              >
                <h1>
                  Article du code
                </h1>
                <div
                  class="c7"
                >
                  <span
                    class="c8"
                  >
                    social groove
                  </span>
                  <span
                    class="c9"
                  >
                    Mis à jour le : 
                    <span
                      class="c10"
                    >
                      03/11/1979
                    </span>
                  </span>
                </div>
                <div
                  class="c11"
                />
              </div>
              <div
                class="c5"
              >
                <div
                  class="c12 c13"
                >
                  intro de l'article
                </div>
                <div>
                  <p
                    class="test-content"
                  >
                    Contenu au format 
                    <strong>
                      html
                    </strong>
                     contenant des tooltip sur certains mot comme 
                    <span
                      data-tooltip-slug="rescrit"
                      data-tooltip-term="rescrit"
                    >
                      <span
                        aria-describedby="tooltip:1"
                        class="c14"
                        data-reach-tooltip-trigger=""
                        tabindex="0"
                      >
                        rescrit
                      </span>
                    </span>
                    . match aussi les abbréviation comme 
                    <span
                      data-tooltip-slug="activite-principale-exercee"
                      data-tooltip-term="APE"
                    >
                      <span
                        aria-describedby="tooltip:2"
                        class="c14"
                        data-reach-tooltip-trigger=""
                        tabindex="0"
                      >
                        APE
                      </span>
                    </span>
                     mais pas ape ou ses variantes comme 
                    <span
                      data-tooltip-slug="activite-principale-exercee"
                      data-tooltip-term="code ape"
                    >
                      <span
                        aria-describedby="tooltip:3"
                        class="c14"
                        data-reach-tooltip-trigger=""
                        tabindex="0"
                      >
                        code ape
                      </span>
                    </span>
                  </p>
                </div>
                <div>
                  Contenu supplémentaire
                </div>
                <div
                  class="c15"
                >
                  pied de page
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c3"
      >
        <div
          class="c0"
        >
          <div
            class="c12"
          >
            <h3
              class="c16"
            >
              Avez-vous trouvé la réponse à votre question ?
            </h3>
            <p
              class="c17"
            >
              <button
                aria-pressed="false"
                class="c18 c19"
              >
                Non
              </button>
              <button
                aria-pressed="false"
                class="c18 c20"
              >
                Oui
              </button>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c21"
  >
    <div
      class="c22"
    >
      <div
        class="c23"
      >
        <svg
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
          />
          <line
            x1="12"
            x2="12"
            y1="9"
            y2="13"
          />
          <line
            x1="12"
            x2="12"
            y1="17"
            y2="17"
          />
        </svg>
      </div>
      <div
        class="c24"
        role="alert"
      >
        Ce site est en cours de construction, la fiabilité des réponses qui s’y trouvent ne sont pas garanties.
        <a
          class="c25"
          href="https://www.legifrance.gouv.fr/affichTexteArticle.do;jsessionid=AE9DCF75DDCF0465784CEE0E7D62729F.tplgfr37s_2?idArticle=JORFARTI000035607420&cidTexte=JORFTEXT000035607388&dateTexte=29990101&categorieLien=id"
          rel="noopener noreferrer"
          target="_blank"
          title="consulter l'ordonance"
        >
          L’ouverture officielle du site
        </a>
        est prévue pour 2020.
      </div>
      <div
        class="c26"
      >
        <button
          aria-label="Fermer"
          aria-pressed="false"
          class="c27"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="18"
              x2="6"
              y1="6"
              y2="18"
            />
            <line
              x1="6"
              x2="18"
              y1="6"
              y2="18"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Answer /> should render tooltip for words with diacritics without breaking html 1`] = `
.c0 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c5 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 1.25rem;
  padding: 0;
  max-width: 46.25rem;
}

.c5 > *:first-child {
  margin-top: 0;
}

.c5 > *:last-child {
  margin-bottom: 0;
}

.c3 {
  padding: 1.25rem 0;
}

.c4 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  border-color: #c9d3df;
  background-color: #fff;
}

.c4 > *:first-child {
  margin-top: 0;
}

.c4 > *:last-child {
  margin-bottom: 0;
}

.c12 {
  padding: 0.625rem 1.25rem;
  color: #434956;
  border-width: 1px;
  border-style: solid;
  border-radius: 0.25rem;
  border-color: #c9d3df;
  background-color: #ebeff3;
}

.c12 > *:first-child {
  margin-top: 0;
}

.c12 > *:last-child {
  margin-bottom: 0;
}

.c27 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  padding: 1rem;
  color: #434956;
  line-height: 0;
  border: none;
}

.c27:hover {
  color: #8c94a6;
}

.c27:active {
  position: relative;
  top: 1px;
}

.c22 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 48px;
  width: 100%;
  background-color: white;
  border-style: solid;
  border-width: 1px;
  border-radius: 0.25rem;
  -webkit-animation: iowhYu 0.3s ease-out;
  animation: iowhYu 0.3s ease-out;
  border-color: #fee5ad;
  box-shadow: 0 5px 10px 0 #c9d3df;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1rem;
  background-color: #fee5ad;
}

.c24 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  padding: 1rem;
  color: #434956;
  text-align: left;
}

.c26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c6 {
  position: relative;
  margin-bottom: 1.25rem;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c8 {
  color: #4c5467;
  font-weight: 600;
}

.c9 {
  margin-left: 1rem;
  color: #53657d;
  font-size: 0.875rem;
  display: inline-block;
}

.c10 {
  color: #4c5467;
  font-weight: 600;
}

.c11 {
  margin-left: -10px;
}

.c21 {
  position: fixed;
  bottom: 0;
  padding: 1rem;
  width: 100%;
  z-index: 1000;
}

.c25 {
  padding: 0 0.25rem;
}

.c16 {
  margin-bottom: 1rem;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c19 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #0c0c0e;
  background: #eaeaea;
  border-color: #eaeaea;
  border-bottom-color: #d1d1d1;
  min-width: 7rem;
}

.c19:not([disabled]):hover,
.c19:not([disabled]):focus {
  background: #f7f7f7;
  color: #18181c;
}

.c19:not([disabled]):active {
  color: #242429;
  background: #fff;
  border-width: 2px 1px 1px 1px;
  border-color: #eaeaea;
  outline: none;
}

.c19[aria-pressed="true"] {
  color: #18181c;
  background: #f7f7f7;
  border-width: 2px 1px 1px 1px;
  border-color: #eaeaea;
  border-top-color: #d1d1d1;
  box-shadow: inset 0 1px 2px 0 #d1d1d1;
}

.c19[aria-pressed="true"]:not([disabled]):hover,
.c19[aria-pressed="true"]:not([disabled]):focus {
  background-color: #eaeaea;
}

.c19[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #d1d1d1;
}

.c19[disabled] {
  cursor: not-allowed;
  color: rgba(12,12,14,0.4);
}

.c19 + .c18 {
  margin-left: 1rem;
}

.c20 {
  padding: 0.625rem 1rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  text-align: center;
  line-height: inherit;
  font-size: 1rem;
  font-weight: 600;
  vertical-align: middle;
  border-style: solid;
  border-width: 1px 1px 2px 1px;
  border-radius: 0.25rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms ease;
  transition: background-color 250ms ease;
  color: #fff;
  background: #006be6;
  border-color: #006be6;
  border-bottom-color: #0053b3;
  min-width: 7rem;
}

.c20:not([disabled]):hover,
.c20:not([disabled]):focus {
  background: #07f;
  color: #fff;
}

.c20:not([disabled]):active {
  color: #fff;
  background: #1a85ff;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  outline: none;
}

.c20[aria-pressed="true"] {
  color: #fff;
  background: #07f;
  border-width: 2px 1px 1px 1px;
  border-color: #006be6;
  border-top-color: #0053b3;
  box-shadow: inset 0 1px 2px 0 #0053b3;
}

.c20[aria-pressed="true"]:not([disabled]):hover,
.c20[aria-pressed="true"]:not([disabled]):focus {
  background-color: #006be6;
}

.c20[aria-pressed="true"]:not([disabled]):active {
  border-top-color: #0053b3;
}

.c20[disabled] {
  cursor: not-allowed;
  color: rgba(255,255,255,0.4);
}

.c20 + .c18 {
  margin-left: 1rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 0;
}

.c2 {
  width: 80%;
}

.c13 {
  margin: 1rem auto;
}

.c15 {
  margin-top: 2.5rem;
  padding: 1rem;
  background-color: #f9f9fc;
  border-radius: 0.25rem;
}

.c14 {
  border-bottom: 1px dotted #006be6;
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

@media print {
  .c5 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c4 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c4 {
    border: none;
    padding: 0 5pt;
  }
}

@media (max-width:600px) {
  .c12 {
    padding: 0.625rem 1.25rem;
  }
}

@media print {
  .c12 {
    border: none;
    padding: 0 5pt;
  }
}

@media (max-width:600px) {
  .c7 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@media (max-width:600px) {
  .c9 {
    margin-left: 0;
  }
}

@media (max-width:980px) {
  .c2 {
    width: 100%;
  }
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
        data-main-content="true"
      >
        <div
          class="c0"
        >
          <div
            class="c4"
          >
            <div
              class="c3"
            >
              <div
                class="c5 c6"
              >
                <h1>
                  Article du code
                </h1>
                <div
                  class="c7"
                >
                  <span
                    class="c8"
                  >
                    social groove
                  </span>
                  <span
                    class="c9"
                  >
                    Mis à jour le : 
                    <span
                      class="c10"
                    >
                      03/11/1979
                    </span>
                  </span>
                </div>
                <div
                  class="c11"
                />
              </div>
              <div
                class="c5"
              >
                <div
                  class="c12 c13"
                >
                  intro de l'article
                </div>
                <div>
                  <p
                    class="test-content"
                  >
                    Contenu au format 
                    <strong>
                      <span
                        data-tooltip-slug="indemnites"
                        data-tooltip-term="indemnités"
                      >
                        <span
                          aria-describedby="tooltip:4"
                          class="c14"
                          data-reach-tooltip-trigger=""
                          tabindex="0"
                        >
                          indemnités
                        </span>
                      </span>
                    </strong>
                    comme 
                    <span
                      data-tooltip-slug="activite-principale-exercee"
                      data-tooltip-term="code ape"
                    >
                      <span
                        aria-describedby="tooltip:5"
                        class="c14"
                        data-reach-tooltip-trigger=""
                        tabindex="0"
                      >
                        code ape
                      </span>
                    </span>
                  </p>
                </div>
                <div>
                  Contenu supplémentaire
                </div>
                <div
                  class="c15"
                >
                  pied de page
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c3"
      >
        <div
          class="c0"
        >
          <div
            class="c12"
          >
            <h3
              class="c16"
            >
              Avez-vous trouvé la réponse à votre question ?
            </h3>
            <p
              class="c17"
            >
              <button
                aria-pressed="false"
                class="c18 c19"
              >
                Non
              </button>
              <button
                aria-pressed="false"
                class="c18 c20"
              >
                Oui
              </button>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="c21"
  >
    <div
      class="c22"
    >
      <div
        class="c23"
      >
        <svg
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
          />
          <line
            x1="12"
            x2="12"
            y1="9"
            y2="13"
          />
          <line
            x1="12"
            x2="12"
            y1="17"
            y2="17"
          />
        </svg>
      </div>
      <div
        class="c24"
        role="alert"
      >
        Ce site est en cours de construction, la fiabilité des réponses qui s’y trouvent ne sont pas garanties.
        <a
          class="c25"
          href="https://www.legifrance.gouv.fr/affichTexteArticle.do;jsessionid=AE9DCF75DDCF0465784CEE0E7D62729F.tplgfr37s_2?idArticle=JORFARTI000035607420&cidTexte=JORFTEXT000035607388&dateTexte=29990101&categorieLien=id"
          rel="noopener noreferrer"
          target="_blank"
          title="consulter l'ordonance"
        >
          L’ouverture officielle du site
        </a>
        est prévue pour 2020.
      </div>
      <div
        class="c26"
      >
        <button
          aria-label="Fermer"
          aria-pressed="false"
          class="c27"
        >
          <svg
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <line
              x1="18"
              x2="6"
              y1="6"
              y2="18"
            />
            <line
              x1="6"
              x2="18"
              y1="6"
              y2="18"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
